cadastro de usuários e middleware de serviços

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,7 @@
         <router-outlet></router-outlet>
     </div>
 
+    <!-- componente ngx-spinner -->
+    <ngx-spinner size="medium" type="ball-scale-multiple"></ngx-spinner>
+
 </div>
