--- a/src/app/components/pages/account/register/register.component.html
+++ b/src/app/components/pages/account/register/register.component.html
@@ -89,6 +89,14 @@
 
                 </form>
 
+                <div class="mt-3 text-success text-center" *ngIf="mensagem_sucesso">
+                    <strong>{{mensagem_sucesso}}</strong>
+                </div>
+
+                <div class="mt-3 text-danger text-center" *ngIf="mensagem_erro">
+                    <strong>{{mensagem_erro}}</strong>
+                </div>
+
             </div>
         </div>
     </div>
