--- a/src/app/components/pages/account/login/login.component.html
+++ b/src/app/components/pages/account/login/login.component.html
@@ -58,6 +58,10 @@
 
                 </form>
 
+                <div *ngIf="mensagem" class="mt-3 text-center text-danger">
+                    <strong>{{mensagem}}</strong>
+                </div>
+
             </div>
         </div>
     </div>
