Cadastro, consulta e edição de contatos

--- a/src/app/components/pages/contatos/contatos-edicao/contatos-edicao.component.html
+++ b/src/app/components/pages/contatos/contatos-edicao/contatos-edicao.component.html
@@ -1,32 +1,62 @@
 <div class="container">
-    <div class="row mt-4">
-        <div class="col-md-12">
 
+    <div class="row mt-2">
+        <div class="col-md-12">
+            <app-alerta-mensagens [mensagem]="mensagem"></app-alerta-mensagens>
+        </div>
+    </div>
+
+    <div class="row mt-2">
+        <div class="col-md-12">
+ 
             <div class="card">
                 <div class="card-body">
                     <h5 class="card-title">Edição de Contatos</h5>
                     <hr />
 
-                    <form>
+                    <form [formGroup]="formContato" (ngSubmit)="onSubmit()">
+
+                        <!-- campo oculto -->
+                        <input type="hidden" formControlName="idContato"/>
 
                         <div class="row">
                             <div class="col-md-6">
                                 <label>Nome do contato:</label>
-                                <input type="text" class="form-control" />
+                                <input type="text" class="form-control" formControlName="nome" />
+                                <div class="text-danger" *ngIf="form.nome.touched && form.nome.invalid">
+                                    <span *ngIf="form.nome.errors.required">
+                                        Por favor, informe o nome do contato.
+                                    </span>
+                                </div>
                             </div>
                             <div class="col-md-4">
                                 <label>Email:</label>
-                                <input type="text" class="form-control" />
+                                <input type="text" class="form-control" formControlName="email" />
+                                <div class="text-danger" *ngIf="form.email.touched && form.email.invalid">
+                                    <span *ngIf="form.email.errors.required">
+                                        Por favor, informe o email do contato.
+                                    </span>
+                                    <span *ngIf="form.email.errors.email">
+                                        Por favor, informe um endereço de email válido.
+                                    </span>
+                                </div>
                             </div>
                             <div class="col-md-2">
                                 <label>Telefone:</label>
-                                <input type="text" class="form-control" />
+                                <input type="text" class="form-control" mask="(00) 00000-0000"
+                                    formControlName="telefone" />
+                                <div class="text-danger" *ngIf="form.telefone.touched && form.telefone.invalid">
+                                    <span *ngIf="form.telefone.errors.required">
+                                        Por favor, informe o telefone do contato.
+                                    </span>
+                                </div>
                             </div>
                         </div>
 
                         <div class="row mt-3">
                             <div class="col-md-12">
-                                <input type="submit" class="btn btn-primary" value="Salvar Alterações" />
+                                <input type="submit" class="btn btn-primary" value="Salvar Alterações"
+                                    [disabled]="!formContato.valid" />
                             </div>
                         </div>
 
