--- a/src/app/components/pages/account/password/password.component.html
+++ b/src/app/components/pages/account/password/password.component.html
@@ -42,6 +42,10 @@
 
                 </form>
 
+                <div class="mt-3 text-center">
+                    <strong>{{mensagem}}</strong>
+                </div>
+
             </div>
         </div>
     </div>
