--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,5 @@
 
     <!-- componente ngx-spinner -->
     <ngx-spinner size="medium" type="ball-scale-multiple"></ngx-spinner>
-
+	<h1>Teste</h1>
 </div>
